[gd_scene load_steps=4 format=3 uid="uid://wa2gvb8fbk2n"]

[ext_resource type="Theme" uid="uid://de3namw7hkal8" path="res://resources/themes/ui.tres" id="1_ybel8"]
[ext_resource type="Script" uid="uid://c3qa5jjpijp2r" path="res://game.gd" id="2_675k6"]
[ext_resource type="Script" uid="uid://bdtbv80x3i177" path="res://instructions_rich_text_label.gd" id="3_feb5d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ybel8")
script = ExtResource("2_675k6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hunt the SNARF
"
scroll_following = true

[node name="ShowInstructionsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel/MarginContainer/RichTextLabel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_bottom = 62.0
grow_horizontal = 0
text = "?"

[node name="InstructionsRichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
script = ExtResource("3_feb5d")

[node name="HideInstructionsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel/MarginContainer/InstructionsRichTextLabel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_bottom = 62.0
grow_horizontal = 0
text = "X"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="MainButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActionButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MoveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ActionButtonsContainer"]
layout_mode = 2
text = "Move"

[node name="ShootButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ActionButtonsContainer"]
layout_mode = 2
text = "Shoot"

[node name="ShootButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfirmShootButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ShootButtonsContainer"]
layout_mode = 2
text = "Confirm"

[node name="GoBackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ShootButtonsContainer"]
layout_mode = 2
text = "Back"

[node name="PostGameButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/PostGameButtonsContainer"]
layout_mode = 2
text = "Restart"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="SelectedRoomButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="ArrowsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/HBoxContainer"]
layout_mode = 2
text = "Bolts:"

[node name="ArrowsCount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="ContextButtonsContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel/MarginContainer/RichTextLabel/ShowInstructionsButton" to="." method="_on_show_instructions_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Panel/MarginContainer/InstructionsRichTextLabel/HideInstructionsButton" to="." method="_on_hide_instructions_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ActionButtonsContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ActionButtonsContainer/ShootButton" to="." method="_on_shoot_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ShootButtonsContainer/ConfirmShootButton" to="." method="_on_confirm_shoot_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/ShootButtonsContainer/GoBackButton" to="." method="_on_go_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/HFlowContainer/MarginContainer/BottomContainer/MainButtonsContainer/PostGameButtonsContainer/RestartButton" to="." method="_on_restart_button_pressed"]
